# gp-connect-access-record-fhir-api

./: .flake8  .gitignore  Makefile  README.md  _ecs-proxies-deploy-int.yml  ecs-proxies-containers.yml  ecs-proxies-deploy-internal-dev.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
bundle_manipulation/: bundle_manipulation_fr.py  bundle_manipulation_smart.py
demo_client/: .gitignore  README.md  oauth-nhsd-api.sln
mediation_service/: Dockerfile  Makefile  pyproject.toml
mediation_service/mediation/: client_credentials.py  example_bundle_with_warning.json  fhir_converter_client.py  filter_bundle.py  getstructuredrecord_payload.json  handle_resolved_allergy.py  local_filter_bundle.py  main.py  orange_jwt.py  pds_client.py  prepare_ssp_response.py  request_helpers.py  sds_client.py  ssp_client.py
mediation_service/tests/: README.md  conftest.py  test_error_handling.py  test_filter_bundle.py  test_handle_resolved_allergy.py  test_prepare_ssp_response.py
mediation_service/tests/performance/: locustfile.py
mediation_service/tests/performance/common/: auth.py
mediation_service/tests/resources/: 9690937286_allergies_response.json  9690937286_response.json  example_bundle_with_warning.json
postman/: gp_connect_collection.json
sandbox/: app.js  app.spec.js  package-lock.json  package.json
specification/: gp-connect-access-record-fhir-api.yaml
tests/: Makefile  conftest.py  pytest.ini  test_api.py  (+1 more)
(+66 files in other folders)
