[project]
python = "^3.8"

[tool.poetry]
name = "mediation_service"
version = "0.1.0"
description = "GP Connect - Mediation Service"
authors = ["NHS Digital - APIM"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
requests = "^2.27.1"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
