[project]
python = "^3.8"

[tool.poetry]
name = "mediation_service"
version = "0.1.0"
description = "GP Connect - Mediation Service"
authors = ["NHS Digital - APIM"]

[tool.poetry.scripts]
mediation = "mediation.main:main"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
requests = "^2.27.1"
PyJWT = "^2.3.0"
cryptography = "^41.0.2"
fhirclient = "^3.2.0"
pytest = "^7.0.1"
jsonpath-rw = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
